📝 Adding swagger to route and correction in others
